[package]
name = "focused-window-volume"
version = "0.1.0"
authors = ["Mac Carrithers <mac@ezm.ac>"]
edition = "2024"
description = "Enhanced keyboard volume control that redirects volume adjustments to the focused application instead of system-wide settings."
readme = "README.md"
repository = "https://github.com/easymac/focused-window-volume"
license = "MIT"

[dependencies]
lazy_static = "1.4.0"
windows = { version = "0.51.1", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant"
]}

[build-dependencies]
windres = "0.2.2"
